--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,7 +37,11 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2.9.0
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
-          fail-if-branches-less-than: 100
+          generate-summary: 'true'  # added just for compeleteness. default value is true. needed for fail-on-decrease-checks
+          fail-on-coverage-decrease: 'true'
+          fail-on-branches-decrease: 'false'
+          #fail-if-branches-less-than: 100
+
 
   build_and_publish_docker_image:
     name: Publish to Docker Hub
