--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,7 @@ jobs:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
           generate-summary: 'true'  # added just for compeleteness. default value is true. needed for fail-on-decrease-checks
           fail-on-coverage-decrease: 'true'
-          fail-on-branches-decrease: 'false'
+          fail-on-branches-decrease: 'true'
           #fail-if-branches-less-than: 100
 
 
